--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: serverless-render
     env: python
     plan: free
-    buildCommand: |
-      pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
+    python:
+      version: 3.11.8
